<resources>
    <string name="app_name">Mew</string>
    <string name="form_email">Email</string>
    <string name="form_pass">Password</string>
    <string name="form1_pass">Password</string>
    <string name="form2_pass">Confirm Password</string>
    <string name="form1_email">Email</string>
    <string name="sign_up">Signup</string>
    <string name="forgetPass">Forget Password</string>
    <string name="log_in">Login</string>
    <string name="logo_name">Choose your vacation</string>
    <string name="search_text">Search...</string>
    <string name="restaurants">Restaurants</string>
    <string name="cafe1">Cafe</string>
    <string name="shops1">Shops</string>
    <string name="wineries1">Wineries</string>
    <string name="in_the_country">Village</string>
    <string name="most_view">Most View</string>
    <string name="view_all">View All</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add missing Place</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Profile</string>
    <string name="slogan_name">Choose your vacation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>