<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    tools:ignore="contentDescription">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical"
        android:focusableInTouchMode="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_icon" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/add_missing_place_icon" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/crafty_girls"
                        android:text="@string/logo_name"
                        android:textSize="24sp" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/app_name"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/white"
                        android:elevation="8dp"
                        app:queryHint="Search here"
                        app:iconifiedByDefault="false"
                        android:focusedByDefault="false">

                    </androidx.appcompat.widget.SearchView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/card1">

                            <ImageView
                                android:id="@+id/shops_button"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/shop" />


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shops1"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/card1">

                            <ImageView
                                android:id="@+id/cafe_button"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/coffe6" />


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cafe1"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card1">

                            <ImageView
                                android:id="@+id/image_b"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/winery"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wineries1"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/card1">

                            <ImageView
                                android:id="@+id/village_button"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/village7" />


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/in_the_country"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/home_background" />


                </RelativeLayout>

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:orientation="vertical"-->
<!--                    android:padding="20dp"-->
<!--                    android:paddingBottom="0dp">-->

<!--                    <RelativeLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content">-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:fontFamily="@font/aclonica"-->
<!--                            android:text="@string/most_view"-->
<!--                            android:textColor="@color/black"-->
<!--                            android:textSize="20sp" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:text="@string/view_all" />-->


<!--                    </RelativeLayout>-->

<!--                    <androidx.recyclerview.widget.RecyclerView-->
<!--                        android:id="@+id/most_view_recycler"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="150dp"-->
<!--                        android:layout_marginStart="10dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginEnd="10dp"-->
<!--                        android:layout_marginBottom="10dp" />-->

<!--                </LinearLayout>-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:orientation="vertical"-->
<!--                    android:padding="20dp">-->

<!--                    <RelativeLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content">-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:fontFamily="@font/aclonica"-->
<!--                            android:text="@string/categories"-->
<!--                            android:textColor="@color/black"-->
<!--                            android:textSize="20sp" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:text="@string/view_all" />-->


<!--                    </RelativeLayout>-->

<!--                    <androidx.recyclerview.widget.RecyclerView-->
<!--                        android:id="@+id/categories_recycler"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="180dp"-->
<!--                        android:layout_marginStart="10dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginEnd="10dp"-->
<!--                        android:layout_marginBottom="10dp" />-->

<!--                </LinearLayout>-->

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>

